# twist

./: .gitignore  Cargo.toml
src/: main.rs
src/gui_components/: events.rs
src/lib/: api.rs  datastore.rs  mod.rs  pretty_bytes.rs  types.rs  ui.rs
src/lib/ui_components/: anime.rs  episodes.rs  mod.rs  notifications.rs  progress.rs  search.rs  statefull_list.rs
