cargo-features = ["strip"]

[package]
name = "twist"
version = "0.1.0"
authors = ["Filip"]
edition = "2018"

[lib]
name = "library"
path = "src/lib/mod.rs"

[[bin]]
name = "ttwist"
path = "src/main.rs"

[dependencies]
crossterm = {version = "0.17", features = ["event-stream"]}
tui = { version="0.9", default-features = false, features = ["crossterm"]}
rand ="0.7.3"
fuzzy-matcher="0.3"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version= "0.2", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10", features = ["json", "stream"] }
base64 = "0.12.1"
openssl-sys = "0.9"
openssl = "0.10"
url = "2.1"
futures ="0.3"
futures-timer = "3.0"

[profile.release]
lto = true
panic = "abort"
strip = "symbols" # Currently only nightly
opt-level = "s"  # s = small, z = smaller